- Created AuthController in Users.API - Created Ocelot gateway and configuration.json for routing - Protecting Orders routes with JWT - Created Extentions shared class library with common methods

--- a/Orders/Orders.API/Orders.API.csproj
+++ b/Orders/Orders.API/Orders.API.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\eShop_Core\eShop_Core.csproj" />
+    <ProjectReference Include="..\..\Shared\Extentions\Extentions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
