--- a/Users/Users.API/appsettings.json
+++ b/Users/Users.API/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionString": "Server=DESKTOP-BAUU60D;Database=eShop;Trusted_Connection=True;",
+  "TokenKey": "TopSecretTopSecretTopSecret",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
